--- a/hostpam:sshd/Dockerfile
+++ b/hostpam:sshd/Dockerfile
@@ -1,11 +1,11 @@
 # Version: 0.0.1
 # edt M06 2018-2019
-# examen
+# Servidor ssh
 #-------------------------------------------------
 FROM edtasixm06/exam:latest
 LABEL author="@edt ASIX M06 2018-2019"
-LABEL description="examen PAM 2018-2019"
-RUN dnf -y install procps vim passwd openldap-clients nss-pam-ldapd pam_mount 
+LABEL description="Client ssh PAM 2018-2019"
+RUN dnf -y install procps vim passwd openldap-clients nss-pam-ldapd pam_mount openssh-clients
 RUN mkdir /opt/docker
 COPY * /opt/docker/
 RUN chmod +x /opt/docker/*.sh
